--- a/json/with_fix_commits/siwapp_siwapp-ror.json
+++ b/json/with_fix_commits/siwapp_siwapp-ror.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-79",
         "Description": "A vulnerability was found in siwapp-ror. It has been rated as problematic. This issue affects some unknown processing. The manipulation leads to cross site scripting. The attack may be initiated remotely. The name of the patch is 924d16008cfcc09356c87db01848e45290cb58ca. It is recommended to apply a patch to fix this issue. The associated identifier of this vulnerability is VDB-216467.",
         "URL": "https://github.com/siwapp/siwapp-ror/pull/365",
+        "Commit SHA": "924d16008cfcc09356c87db01848e45290cb58ca",
         "Tag": "['Patch']"
     }
 ]
