--- a/json/with_fix_commits/snowflakedb_snowflake-connector-nodejs.json
+++ b/json/with_fix_commits/snowflakedb_snowflake-connector-nodejs.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-77",
         "Description": "snowflake-connector-nodejs, a NodeJS driver for Snowflake, is vulnerable to command injection via single sign on (SSO) browser URL authentication in versions prior to 1.6.21. In order to exploit the potential for command injection, an attacker would need to be successful in (1) establishing a malicious resource and (2) redirecting users to utilize the resource. The attacker could set up a malicious, publicly accessible server which responds to the SSO URL with an attack payload. If the attacker then tricked a user into visiting the maliciously crafted connection URL, the user\u00c2\u2019s local machine would render the malicious payload, leading to a remote code execution. This attack scenario can be mitigated through URL whitelisting as well as common anti-phishing resources. Version 1.6.21 contains a patch for this issue.",
         "URL": "https://github.com/snowflakedb/snowflake-connector-nodejs/pull/465",
+        "Commit SHA": "0c9622ae12cd7d627df404b73a783b4a5f60728a",
         "Tag": "['Patch']"
     }
 ]
