--- a/json/with_fix_commits/spring-projects_spring-framework.json
+++ b/json/with_fix_commits/spring-projects_spring-framework.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-264",
         "Description": "The Spring OXM wrapper in Spring Framework before 3.2.4 and 4.0.0.M1, when using the JAXB marshaller, does not disable entity resolution, which allows context-dependent attackers to read arbitrary files, cause a denial of service, and conduct CSRF attacks via an XML external entity declaration in conjunction with an entity reference in a (1) DOMSource, (2) StAXSource, (3) SAXSource, or (4) StreamSource, aka an XML External Entity (XXE) issue.",
         "URL": "https://github.com/spring-projects/spring-framework/pull/317/files",
+        "Commit SHA": null,
         "Tag": "['Patch']"
     }
 ]
