--- a/json/final_processed/abhilash1985_PredictApp.json
+++ b/json/final_processed/abhilash1985_PredictApp.json
@@ -7,6 +7,8 @@
         "URL": "https://github.com/abhilash1985/PredictApp/pull/73",
         "Tag": "['Patch']",
         "fix_commit_hash": "5e737c250b594ee0eaeaabd9f8b7a0882f05c41d",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
