--- a/json/final_processed/Alfresco_alfresco-android-app.json
+++ b/json/final_processed/Alfresco_alfresco-android-app.json
@@ -7,6 +7,8 @@
         "URL": "https://github.com/Alfresco/alfresco-android-app/pull/547",
         "Tag": "['Patch', 'Third Party Advisory']",
         "fix_commit_hash": "0b1fb6fceb286f1e888590a2954406eeb0583129",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
