--- a/json/final_processed/alanxz_rabbitmq-c.json
+++ b/json/final_processed/alanxz_rabbitmq-c.json
@@ -7,6 +7,8 @@
         "URL": "https://github.com/alanxz/rabbitmq-c/pull/781",
         "Tag": "['Patch']",
         "fix_commit_hash": "463054383fbeef889b409a7f843df5365288e2a0",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
