--- a/json/final_processed/apolloconfig_apollo.json
+++ b/json/final_processed/apolloconfig_apollo.json
@@ -7,7 +7,9 @@
         "URL": "https://github.com/apolloconfig/apollo/pull/4664",
         "Tag": "['Issue Tracking', 'Patch']",
         "fix_commit_hash": "00d968a7229f809b0d8ed0532e8c01a6c2b7c750",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     },
     {
         "repo_name": "apolloconfig/apollo",
@@ -17,6 +19,11 @@
         "URL": "https://github.com/apolloconfig/apollo/pull/4663",
         "Tag": "['Issue Tracking', 'Patch']",
         "fix_commit_hash": "7df79bf8df6960433ed4ff782a54e3dfc74632bd",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [
+            "52f0084e9135e8641f5c0f3a89a164285645555d",
+            "0be1e7037f59a8cec12ecb9e1eb340bc7957c43a"
+        ],
+        "matched": []
     }
 ]
