--- a/json/final_processed/apptainer_apptainer.json
+++ b/json/final_processed/apptainer_apptainer.json
@@ -7,7 +7,9 @@
         "URL": "https://github.com/apptainer/apptainer/pull/1523",
         "Tag": "['Patch']",
         "fix_commit_hash": "91bfd6993aa833c4f224c69664e29fe43af24ff8",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     },
     {
         "repo_name": "apptainer/apptainer",
@@ -17,6 +19,8 @@
         "URL": "https://github.com/apptainer/apptainer/pull/1578",
         "Tag": "['Patch']",
         "fix_commit_hash": "6142efe142590d62acc96d0a3da6c613138e1e15",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
