--- a/json/final_processed/appwrite_appwrite.json
+++ b/json/final_processed/appwrite_appwrite.json
@@ -7,6 +7,8 @@
         "URL": "https://github.com/appwrite/appwrite/pull/2778",
         "Tag": "['Patch', 'Third Party Advisory']",
         "fix_commit_hash": "dd980ec1b8034a50b8beac57b66478189f5d7e83",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
