--- a/json/final_processed/basecamp_easymon.json
+++ b/json/final_processed/basecamp_easymon.json
@@ -7,6 +7,8 @@
         "URL": "https://github.com/basecamp/easymon/pull/25",
         "Tag": "['Patch', 'Third Party Advisory']",
         "fix_commit_hash": "a5deaf7359fc177fcf3fca725618b53619a30b7e",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
