--- a/json/final_processed/bitovi_launchpad.json
+++ b/json/final_processed/bitovi_launchpad.json
@@ -7,6 +7,8 @@
         "URL": "https://github.com/bitovi/launchpad/pull/124",
         "Tag": "['Exploit', 'Patch', 'Third Party Advisory']",
         "fix_commit_hash": "e2f506b5089b1b29d22c80a77ff636b3b1f6e57c",
-        "inducing_commit_hash_pyszz": []
+        "inducing_commit_hash_pyszz": [],
+        "inducing_commit_hash_pd": [],
+        "matched": []
     }
 ]
